--- a/face_recognition/package.json
+++ b/face_recognition/package.json
@@ -10,8 +10,11 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^3.9.1",
     "html2canvas": "^1.4.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.3.1",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.4",
     "react-redux-loading-bar": "^5.0.4",
@@ -45,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.55.0"
   }
 }
