--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 cmake==3.24.1
 Django==4.1.1
+django-cors-headers==3.10.0
 django-environ==0.8.1
 django-filter==22.1
 django-storages==1.13.1
@@ -18,6 +19,7 @@ idna==3.4
 importlib-metadata==5.0.0
 imutils==0.5.4
 Markdown==3.4.1
+mysqlclient==2.1.0
 numpy==1.23.2
 opencv-python==4.6.0.66
 Pillow==9.2.0
