--- a/face_recognition/package.json
+++ b/face_recognition/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "aws-amplify": "^4.3.42",
     "chart.js": "^3.9.1",
     "html2canvas": "^1.4.1",
     "react": "^17.0.2",
