--- a/faceRecognitionAPI/requirements.txt
+++ b/faceRecognitionAPI/requirements.txt
@@ -52,7 +52,7 @@ Markdown==3.4.1
 MarkupSafe==2.1.1
 msgpack==1.0.4
 msgpack-python==0.5.6
-mysqlclient==2.1.0
+mysqlclient
 numpy==1.23.2
 opencv-python==4.6.0.66
 packaging==21.3
