--- a/faceRecognitionAPI/requirements.txt
+++ b/faceRecognitionAPI/requirements.txt
@@ -32,7 +32,7 @@ django-filter==22.1
 django-grip==3.2.0
 django-storages==1.13.1
 djangorestframework==3.14.0
-dlib==19.24.0
+dlib
 docker==4.4.4
 docker-compose==1.25.5
 dockerpty==0.4.1
