--- a/faceRecognitionAPI/.ebextensions/packages.config
+++ b/faceRecognitionAPI/.ebextensions/packages.config
@@ -4,5 +4,10 @@ packages:
     mariadb-devel: []
     libusb: []
     libusb-devel: []
-    "Development Tools": []
+    flex: []
+    gcc c/c++ compiler: []
+    strace: []
+    make: []
     cmake: []
+    gdb: []
+    gcc-c++ compiler: []
