--- a/faceRecognitionAPI/.ebextensions/packages.config
+++ b/faceRecognitionAPI/.ebextensions/packages.config
@@ -4,10 +4,6 @@ packages:
     mariadb-devel: []
     libusb: []
     libusb-devel: []
-    flex: []
-    gcc c/c++ compiler: []
-    strace: []
     make: []
     cmake: []
-    gdb: []
-    gcc-c++ compiler: []
+    dlib: []
