--- a/faceRecognitionAPI/requirements.txt
+++ b/faceRecognitionAPI/requirements.txt
@@ -1,5 +1,7 @@
+absl-py==1.3.0
 arrow==1.2.3
 asgiref==3.5.2
+astunparse==1.6.3
 async-timeout==4.0.2
 attrs==22.1.0
 autobahn==22.7.1
@@ -10,6 +12,7 @@ bcrypt==4.0.1
 blessed==1.19.1
 botocore==1.23.54
 cached-property==1.5.2
+cachetools==5.2.0
 canvasapi==3.0.0
 cement==2.8.2
 certifi==2022.9.14
@@ -21,7 +24,9 @@ click==8.1.3
 cmake==3.24.1
 colorama==0.4.3
 constantly==15.1.0
+contourpy==1.0.6
 cryptography==38.0.1
+cycler==0.11.0
 daphne==3.0.2
 Deprecated==1.2.13
 Django==4.1.1
@@ -30,6 +35,7 @@ django-environ==0.8.1
 django-eventstream==4.4.1
 django-filter==22.1
 django-grip==3.2.0
+django-rest-live==0.7.0
 django-storages==1.13.1
 djangorestframework==3.14.0
 dlib==19.24.0
@@ -39,8 +45,17 @@ dockerpty==0.4.1
 docopt==0.6.2
 face-recognition==1.3.0
 face-recognition-models==0.3.0
+fer==22.4.0
+flatbuffers==22.10.26
+fonttools==4.38.0
 future==0.16.0
+gast==0.4.0
+google-auth==2.14.1
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
 gripcontrol==4.1.0
+grpcio==1.50.0
+h5py==3.7.0
 hyperlink==21.0.0
 idna==3.4
 importlib-metadata==5.0.0
@@ -48,17 +63,28 @@ imutils==0.5.4
 incremental==22.10.0
 jmespath==0.10.0
 jsonschema==3.2.0
+keras==2.10.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.4
+libclang==14.0.6
 Markdown==3.4.1
 MarkupSafe==2.1.1
+matplotlib==3.6.2
 msgpack==1.0.4
 msgpack-python==0.5.6
-mysqlclient
+mtcnn==0.1.1
+mysqlclient==2.1.1
 numpy==1.23.2
+oauthlib==3.2.2
+opencv-contrib-python==4.6.0.66
 opencv-python==4.6.0.66
+opt-einsum==3.3.0
 packaging==21.3
+pandas==1.5.1
 paramiko==2.11.0
 pathspec==0.9.0
 Pillow==9.2.0
+protobuf==3.19.6
 pubcontrol==3.3.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -73,15 +99,24 @@ pytz==2022.2.1
 PyYAML==5.4.1
 redis==4.3.4
 requests==2.26.0
+requests-oauthlib==1.3.1
+rsa==4.9
 semantic-version==2.8.5
 service-identity==21.1.0
 six==1.14.0
 sqlparse==0.4.2
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.10.0
+tensorflow-estimator==2.10.0
+tensorflow-io-gcs-filesystem==0.27.0
 termcolor==1.1.0
 texttable==1.6.4
+tqdm==4.64.1
 Twisted==22.10.0
 txaio==22.2.1
-typing_extensions==4.4.0
+typing-extensions==4.4.0
 urllib3==1.26.12
 wcwidth==0.1.9
 websocket-client==0.59.0
