--- a/face_recognition/package.json
+++ b/face_recognition/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.7",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.15",
+    "@mui/material": "^5.10.15",
+    "@mui/x-date-pickers": "^5.0.9",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.42",
     "chart.js": "^3.9.1",
     "html2canvas": "^1.4.1",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.3.1",
     "react-data-table-component": "^7.5.3",
