--- a/faceRecognitionAPI/requirements.txt
+++ b/faceRecognitionAPI/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==1.3.0
+amqp==5.1.1
 arrow==1.2.3
 asgiref==3.5.2
 astunparse==1.6.3
@@ -6,14 +7,15 @@ async-timeout==4.0.2
 attrs==22.1.0
 autobahn==22.7.1
 Automat==22.10.0
-awsebcli==3.20.3
 backports.zoneinfo==0.2.1
 bcrypt==4.0.1
+billiard==3.6.4.0
 blessed==1.19.1
-botocore==1.23.54
+botocore==1.29.14
 cached-property==1.5.2
 cachetools==5.2.0
 canvasapi==3.0.0
+celery==5.2.7
 cement==2.8.2
 certifi==2022.9.14
 cffi==1.15.1
@@ -21,28 +23,40 @@ channels==3.0.4
 channels-redis==4.0.0
 charset-normalizer==2.0.12
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 cmake==3.24.1
 colorama==0.4.3
 constantly==15.1.0
 contourpy==1.0.6
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==38.0.1
 cycler==0.11.0
 daphne==3.0.2
 Deprecated==1.2.13
 Django==4.1.1
+django-celery-beat==2.4.0
+django-celery-results==2.4.0
 django-cors-headers==3.10.0
 django-environ==0.8.1
 django-eventstream==4.4.1
+django-extensions==3.2.1
 django-filter==22.1
 django-grip==3.2.0
+django-models2puml==0.2
 django-rest-live==0.7.0
 django-storages==1.13.1
+django-timezone-field==5.0
 djangorestframework==3.14.0
 dlib==19.24.0
 docker==4.4.4
 docker-compose==1.25.5
 dockerpty==0.4.1
 docopt==0.6.2
+docutils==0.16
+drf-yasg==1.21.4
 face-recognition==1.3.0
 face-recognition-models==0.3.0
 fer==22.4.0
@@ -61,11 +75,16 @@ idna==3.4
 importlib-metadata==5.0.0
 imutils==0.5.4
 incremental==22.10.0
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
 jmespath==0.10.0
 jsonschema==3.2.0
+jwcrypto==1.4.2
 keras==2.10.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
+kombu==5.2.4
 libclang==14.0.6
 Markdown==3.4.1
 MarkupSafe==2.1.1
@@ -76,6 +95,7 @@ mtcnn==0.1.1
 mysqlclient==2.1.1
 numpy==1.23.2
 oauthlib==3.2.2
+openapi-codec==1.3.2
 opencv-contrib-python==4.6.0.66
 opencv-python==4.6.0.66
 opt-einsum==3.3.0
@@ -84,25 +104,35 @@ pandas==1.5.1
 paramiko==2.11.0
 pathspec==0.9.0
 Pillow==9.2.0
+prompt-toolkit==3.0.33
 protobuf==3.19.6
 pubcontrol==3.3.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
+pycurl==7.44.1
+pydot==1.4.2
+pygraphviz==1.10
 PyJWT==2.6.0
+PyLTI1p3==1.12.2
 PyNaCl==1.5.0
 pyOpenSSL==22.1.0
 pyparsing==3.0.9
 pyrsistent==0.19.1
+python-crontab==2.6.0
 python-dateutil==2.8.2
 pytz==2022.2.1
 PyYAML==5.4.1
 redis==4.3.4
 requests==2.26.0
 requests-oauthlib==1.3.1
-rsa==4.9
+rsa==4.7.2
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
+s3transfer==0.6.0
 semantic-version==2.8.5
 service-identity==21.1.0
+simplejson==3.18.0
 six==1.14.0
 sqlparse==0.4.2
 tensorboard==2.10.1
@@ -117,7 +147,10 @@ tqdm==4.64.1
 Twisted==22.10.0
 txaio==22.2.1
 typing-extensions==4.4.0
+tzdata==2022.6
+uritemplate==4.1.1
 urllib3==1.26.12
+vine==5.0.0
 wcwidth==0.1.9
 websocket-client==0.59.0
 Werkzeug==2.2.2
